--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,9 @@ services:
 
   mongodb:
     image: mongo
+    container_name: micro-authentication-db
     ports:
-      - "27017:27017"
+      - "27018:27017"
     environment:
       MONGO_ROOT_USERNAME: admin
       MONGO_ROOT_PASSWORD: admin
