--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,18 @@
-MONGO_DATABASE=
-PORT=
-JWT_SECRET=
-CLOUDAMQP_URL=
+### Application envs
+MIRANTES_PORT=
+MIRANTES_JWT_SECRET=
+MIRANTES_FORGOT_MAIL_URL=
 
-###
-REDOCLY_SWAGGER_API=
+### DATABASE
+DATABASE_URL=
 
-SEND_MAIL_SERVICE=
-SEND_MAIL_HOST=
-SEND_MAIL_PORT=
-SEND_MAIL_SECURE=
-SEND_MAIL_USER=
-SEND_MAIL_PASS=
-
-###
-FORGOT_MAIL_URL=
+### RabbitMQ Url connection
+CLOUDAMQP_URL=amqps:
 
 ### LINKEDIN CREDENTIALS
 LINKEDIN_CLIENT_ID=
 LINKEDIN_CLIENT_SECRET=
 LINKEDIN_URL_REDIRECT=
-LINKEDIN_SCOPE=
 LINKEDIN_GRANT_TYPE=
 LINKEDIN_RESPONSE_TYPE=
 LINKEDIN_URL=
