add values in env.xample

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,19 @@
 ### Application envs
-MIRANTES_PORT=
-MIRANTES_JWT_SECRET=
-MIRANTES_FORGOT_MAIL_URL=
+MIRANTES_PORT=3000
+MIRANTES_JWT_SECRET="THYGUHKIJKJLSD$#%^&(#$&^*$#GJHFSDGKJHFEGU#$"
+MIRANTES_FORGOT_MAIL_URL=http://localhost:3002?token=
 
 ### DATABASE
-DATABASE_URL=
+DATABASE_URL="mongodb://localhost:27018/micro-authentication-mongodb"
 
 ### RabbitMQ Url connection
-CLOUDAMQP_URL=amqps:
+CLOUDAMQP_URL=amqps://jjhwapof:Fidr9tpUqYvWKeXgDtKGeaKZ5eosZBVS@fish.rmq.cloudamqp.com/jjhwapof
 
 ### LINKEDIN CREDENTIALS
-LINKEDIN_CLIENT_ID=
-LINKEDIN_CLIENT_SECRET=
-LINKEDIN_URL_REDIRECT=
-LINKEDIN_GRANT_TYPE=
-LINKEDIN_RESPONSE_TYPE=
-LINKEDIN_URL=
+LINKEDIN_CLIENT_ID=77a4jivprx7ctq
+LINKEDIN_CLIENT_SECRET=vil6USWqTPwyElNQ
+LINKEDIN_URL_REDIRECT=https://new-design.b2c.mirantes.io/auth/sign-in
+LINKEDIN_SCOPE=openid+profile+email
+LINKEDIN_GRANT_TYPE=authorization_code
+LINKEDIN_RESPONSE_TYPE=code
+LINKEDIN_URL="https://linkedin.com/oauth/v2/authorization?client_id=77a4jivprx7ctq&response_type=code&scope=openid+profile+email&redirect_uri=https://new-design.b2c.mirantes.io/auth/sign-in"
