--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node .",
     "dev": "ts-node-dev --inspect -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "lint": "eslint --fix --ext .ts,.tsx ./src",
-    "build": "rimraf build && babel src --extensions \".js,.ts\" --out-dir build --copy-files --no-copy-ignored",
+    "build": "tsc -b ./tsconfig.json",
     "test": "jest",
     "cti": "cti",
     "cti:make": "sh ./cti.sh",
