--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "strict": true,
     "skipLibCheck": true,
     "baseUrl": ".",
+    "outDir": "./dist",
     "paths": {
       "~/*": [
         "./src/*"
