--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node .",
+    "start": "node -r dotenv/config dist/server",
     "dev": "ts-node-dev --inspect -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "lint": "eslint --fix --ext .ts,.tsx ./src",
-    "build": "tsc -b ./tsconfig.json",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc -p tsconfig-build.json",
     "test": "jest",
     "cti": "cti",
     "cti:make": "sh ./cti.sh",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down"
-
   },
   "keywords": [],
   "author": "",
@@ -30,6 +30,7 @@
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
+    "@types/module-alias": "^2.0.4",
     "@types/node": "^20.11.16",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^6.0.2",
@@ -69,6 +70,7 @@
     "jest-express": "^1.12.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "module-alias": "^2.2.3",
     "mongoose": "^8.0.1",
     "nodejs": "^0.0.0",
     "nodemailer": "^6.9.9",
